# CIE-timetable-YWLG2026S

./: 2026 JUNE CIE ExamTimetableComponentSpreadSheet.xlsx  README.md  gui.py  main.py  pyproject.toml
