[project]
name = "cie-timetable-ywlg2026s"
version = "0.1.0"
description = "CIE Exam Timetable to iCalendar"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "ttkbootstrap>=1.20.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true